--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -1,3 +1,9 @@
-<h1>To Do List</h1>
-<h4><a href="/categories">View Categories</a></h4>
-<h4><a href = "/tasks">View Tasks</a></h4>
+<h1>Portlands Best Restaurants</h1>
+
+<h4><a href="/cuisines/all">View Cuisines</a></h4>
+<h4><a href = "/restaurants">View Restaurants</a></h4>
+<br>
+<br>
+<br>
+<h4><a href="/cuisines/new">Add Cuisines</a></h4>
+<h4><a href = "/restaurants/new">Add Restaurantss</a></h4>
