finish nancy pages.

--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -1,9 +1,18 @@
-<h1>Portlands Best Restaurants</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Hello Friend!</title>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+</head>
+<body>
+  <h1>Portlands Best Restaurants</h1>
 
-<h4><a href="/cuisines/all">View Cuisines</a></h4>
-<h4><a href = "/restaurants">View Restaurants</a></h4>
-<br>
-<br>
-<br>
-<h4><a href="/cuisines/new">Add Cuisines</a></h4>
-<h4><a href = "/restaurants/new">Add Restaurantss</a></h4>
+  <h4><a href="/cuisines">View Cuisines</a></h4>
+  <h4><a href = "/restaurants">View Restaurants</a></h4>
+  <br>
+  <br>
+  <br>
+  <h4><a href="/cuisines/new">Add Cuisines</a></h4>
+  <h4><a href = "/restaurants/new">Add Restaurantss</a></h4>
+</body>
+</html>
