--- a/Views/restaurant_detail.cshtml
+++ b/Views/restaurant_detail.cshtml
@@ -3,3 +3,4 @@
 <h3>Cuisine:  @Model.GetCuisine()</h3>
 <h3>Phone Number:  @Model.GetPhoneNumber()</h3>
 <a href="/restaurants/edit/@Model.GetId()">Edit Restaurant</a>
+<a href="/restaurants/delete/@Model.GetId()">Delete Restaurant</a>
