--- a/Views/cuisines.cshtml
+++ b/Views/cuisines.cshtml
@@ -5,13 +5,9 @@
   {
     @foreach (var cuisine in Model)
     {
-      <li><a href="/categories/@cuisine.GetId()">@cuisine.GetName()</a> | <a href="/cuisine/edit/@cuisine.GetId()">Edit</a>| <a href="/cuisine/delete/@cuisine.GetId()">Delete</a></li>
+      <li><a href="/cuisines/restaurants/@cuisine.GetId()">@cuisine.GetName()</a> | <a href="/cuisine/edit/@cuisine.GetId()">Edit</a>| <a href="/cuisines/delete/@cuisine.GetId()">Delete</a></li>
     }
   }
 </ul>
 <h4><a href="/cuisines/new">Add a new cuisine</a></h4>
 <h4><a href="/">Return home</a></h4>
-
-<form action="/cuisines/clear" method="post">
-  <button type="submit">Clear all cuisines</button>
-</form>
