--- a/Views/restaurants.cshtml
+++ b/Views/restaurants.cshtml
@@ -11,7 +11,8 @@ else
       <li><a href="/restaurants/@restaurant.GetId()">@restaurant.GetName()</a></li>
     }
   </ul>
-  <form action="/restuarants/delete" method="post">
+  <form action="/restuarants/clearall" method="post">
+    <input type="hidden" name="_method" value="DELETE">
     <button type="submit">Clear all restaurants</button>
   </form>
 }
