--- a/Views/restaurants_edit.cshtml
+++ b/Views/restaurants_edit.cshtml
@@ -1,17 +1,26 @@
 <h1>Edit Restaurant</h1>
-<form action = "/restaurants/new" method = "post">
+<form action = "/restaurants/edit/@Model["restaurant"].GetId()" method = "post">
+  <input type="hidden" name="_method" value="PATCH">
   <label for = "restaurant-name">Name</label>
-  <input id = "restaurant-name" name = "restaurant-name" type = "text" value = "@Model.GetName()">
+  <input id = "restaurant-name" name = "restaurant-name" type = "text" value = "@Model["restaurant"].GetName()">
   <label for = "restaurant-phoneNumber">Phone Number</label>
-    <input id = "restaurant-phoneNumber" name = "restaurant-phoneNumber" type = "text">
+    <input id = "restaurant-phoneNumber" name = "restaurant-phoneNumber" type = "text" value = "@Model["restaurant"].GetPhoneNumber()">
   <label for="category-id">Cuisine</label>
   <select name = "category-id">
-    @foreach (var cuisine in Model)
+    @foreach (var cuisine in Model["cuisines"])
     {
-      <option value = "@cuisine.GetId()">@cuisine.GetName()</option>
+      @if (@Model["restaurant"].GetId() == cuisine.GetId())
+      {
+         <option value = "@cuisine.GetId()" selected="true">@cuisine.GetName()</option>
+
+      }
+      else
+      {
+        <option value = "@cuisine.GetId()" selected="false">@cuisine.GetName()</option>
+      }
     }
   </select>
-  <button type = "submit">Add Restaurant</button>
+  <button type = "submit">Save Changes</button>
 </form>
 <p><a href = "/">Back home</a></p>
 <p><a href = "/restaurants">View all restaurants</a></p>
