adds custom style sheet.

--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -3,16 +3,24 @@
 <head>
   <title>Hello Friend!</title>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+  <link rel='stylesheet' href="../Content/css/index.css">
+
 </head>
 <body>
-  <h1>Portlands Best Restaurants</h1>
+  <div class="page-header">
+    <h1>Portlands Best Restaurants</h1>
+  </div>
+  <div class="container">
 
-  <h4><a href="/cuisines">View Cuisines</a></h4>
-  <h4><a href = "/restaurants">View Restaurants</a></h4>
-  <br>
-  <br>
-  <br>
-  <h4><a href="/cuisines/new">Add Cuisines</a></h4>
-  <h4><a href = "/restaurants/new">Add Restaurantss</a></h4>
+
+    <h4><a href="/cuisines">View Cuisines</a></h4>
+    <h4><a href = "/restaurants">View Restaurants</a></h4>
+    <br>
+    <br>
+    <br>
+    <h4><a href="/cuisines/new">Add Cuisines</a></h4>
+    <h4><a href = "/restaurants/new">Add Restaurantss</a></h4>
+  </div>
+
 </body>
 </html>
